addysnip/base/ui-dashboard/deployment-ui-dashboard.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "10"
    field.cattle.io/publicEndpoints: '[{"addresses":[""],"port":443,"protocol":"HTTPS","serviceName":"addysnip-dev:ui-dashboard","ingressName":"addysnip-dev:ui-dashboard","hostname":"dashboard.dev.addysnip.com","path":"/","allNodes":false}]'
  name: ui-dashboard
  namespace: addysnip
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      workload.user.cattle.io/workloadselector: apps.deployment-addysnip-dev-ui-dashboard
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        workload.user.cattle.io/workloadselector: apps.deployment-addysnip-dev-ui-dashboard
    spec:
      containers:
      - image: gcr.io/addysnip/ui-dashboard:f15fd028
        imagePullPolicy: Always
        name: ui-dashboard
        ports:
        - containerPort: 80
          name: 80tcp
          protocol: TCP
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: gar-json-key
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
