addysnip/base/ui-dashboard/service-ui-dashboard.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    field.cattle.io/targetWorkloadIds: '["addysnip-dev/ui-dashboard"]'
    management.cattle.io/ui-managed: "true"
  name: ui-dashboard
  namespace: addysnip
spec:
  clusterIP: 10.245.6.120
  clusterIPs:
  - 10.245.6.120
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 80tcp
    port: 80
  selector:
    workload.user.cattle.io/workloadselector: apps.deployment-addysnip-dev-ui-dashboard
